Fix: back to top btn to be hidden by cookie box

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -972,7 +972,7 @@ pre.chroma {
     height: 38px;
     width: 38px;
     text-align: center;
-    z-index: 5;
+    z-index: 10000;
     
 }
 
